# bench-af-UwU-edition-base-dataset

./: README.md  metadata.toml  pyproject.toml
configs/qwen_local_highest_bid/: validate_model.yaml
configs/test_hf/: validate_model.yaml
detectors/poser_1_belief_state_induction/: main.py
detectors/poser_2_activation_noising/: main.py
detectors/poser_3_bad_finetuning_rate/: main.py
detectors/poser_4_suspicious_concept_identification/: main.py
detectors/poser_5_decision_making_speed/: main.py
detectors/poser_6_attentiveness_to_oversight/: main.py
detectors/stupid/: main.py
detectors/test/: main.py
detectors/test_nnsight/: main.py
environments/blackmail/: main.py  process_emails.py
environments/blackmail_no_tools/: main.py  process_txt.py
environments/delete_model/: generate_datasets.py  main.py
environments/discriminatory/: main.py
environments/highest_bid_military/: generate_datasets.py  main.py
environments/mvp/: main.py
environments/report_failure/: generate_datasets.py  main.py
environments/report_failure_military/: generate_datasets.py  main.py
environments/report_resources/: generate_datasets.py  main.py
environments/report_resources_no_tools/: generate_datasets.py  main.py
environments/report_score/: generate_datasets.py  main.py
environments/report_score_military/: generate_datasets.py  main.py
environments/self_exfiltrate/: deployment_dataset.jsonl  main.py
environments/steal_resources/: generate_datasets.py  main.py
environments/turn_off_monitor/: main.py  scorer.py
environments/write_article_military/: main.py  (+1 more)
(+35 files in other folders)
