[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-set-default"
version = "0.1.0"
description = "Default Bench-AF dataset bundle"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["bench-af", "datasets", "alignment", "evaluation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch",
  "transformers>=4.40",
  "accelerate>=0.29",
  "datasets>=2.18",
  "trl>=0.8",
  "tqdm>=4.66",
  "wandb>=0.16",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "orjson>=3.10",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pandas>=2.0",
  "openai>=1.35",
  "inspect-ai>=0.3",
  "nnsight>=0.3",
]

[project.optional-dependencies]
train = ["trl>=0.8", "accelerate>=0.29", "datasets>=2.18", "wandb>=0.16"]

evals = ["inspect-ai>=0.3", "orjson>=3.10"]

nnsight = ["nnsight>=0.3"]

scrape = ["beautifulsoup4>=4.12", "pandas>=2.0", "requests>=2.31"]

dev = ["ruff>=0.5", "black>=24.4", "mypy>=1.10", "pytest>=8.2"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
